[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kosmoss"
version = "0.1.4"
description = "Bootcamp"
license = "MIT"
authors = ["alxyok <alxyok@naiama.com>"]
readme = "README.md"
packages = [{include = "kosmoss", from = "src"}]

[tool.poetry.scripts]
download = "kosmoss.dataproc.download:download"
download_tfrecords = "kosmoss.dataproc.download:download_tfrecords"