# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
# 
# [tool.poetry]
# name = "kosmoss"
# version = "0.1.6"
# description = "Bootcamp"
# license = "MIT"
# authors = ["alxyok <alxyok@naiama.com>"]
# readme = "README.md"
# packages = [{include = "kosmoss", from = "src"}]
# 
# [tool.poetry.scripts]
# download = "kosmoss.dataproc.download:download"
# download_tfrecords = "kosmoss.dataproc.download:download_tfrecords"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kosmoss"
authors = [{name = "alxyok", email = "alxyok@naiama.com"}]
readme = "README.md"
description = "Bootcamp"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7.1"
dynamic = ["version"]

[project.scripts]
download = "kosmoss.dataproc.download:download"
download_tfrecords = "kosmoss.dataproc.download:download_tfrecords"