[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "kosmoss"
authors = [{name = "alxyok", email = "alxyok@naiama.com"}]
readme = "README.md"
description = "Bootcamp"
license = {file = "LICENSE.txt"}
requires-python = ">=3.7.1"
dynamic = ["version"]

[project.scripts]
download = "kosmoss.dataproc.download:download"
download_tfrecords = "kosmoss.dataproc.download:download_tfrecords"